2013-12-16  Ramon Casero  <rcasero@gmail.com>

	* At this point, Gerardus builds under Windows 64 bit.

	* matlab/MatlabImportFilter.hxx: (0.8.1)

	- Fix bug. Windows gives a compilation error for mxINT64_CLASS in Cgal. It's too complicated trying
	to fix that. Instead, we just disable that type as a valid input type. It's not likely that it will
	be used anyway.

	* matlab/MatlabExportFilter.hxx: (0.6.1)

	- Fix bug. Windows doesn't accept the declaration of an array variable with length 0, e.g. dims[0].
	It doesn't allow either to declare an array with a variable length, so we have to use the 
	mwSize *dims = new mwSize[ndims] for that.

	* CMakeLists.txt: (0.8.1)
	* matlab/CgalToolbox/CMakeLists.txt: (0.2.19)

	- Fix bug. On Windows, cgal_check_self_intersect needs to be linked to the boost serialize library.

	* CMakeLists.txt: (0.8.0)

	- Add linux build of library IPOPT, a dependency of OptiToolbox.

	- This also requires that gfortran and gfortran-4.4 have been
	installed in the linux system.

2013-12-15  Ramon Casero  <rcasero@gmail.com>

	* Add cpp/src/third-party/Ipopt-3.11.6:

	- Ipopt is an open-source solver for large-scale nonlinear
	continuous optimization. It can be used from modeling
	environments, such as AIMMS, AMPL, GAMS, or Matlab, and it is also
	available as callable library with interfaces to C++, C, Fortran,
	Java, and R. Ipopt uses an interior point method, together with a
	filter linear search procedure. Project manager Andreas Waechter.

	- A dependency of SCIP, that is a dependency of OptiToolbox.

	- http://www.coin-or.org/download/source/Ipopt/

2013-12-14  Ramon Casero  <rcasero@gmail.com>

	* Add cpp/src/third-party/metis-4.0.3:

	- METIS: A Software Package for Partitioning Unstructured Graphs,
	Partitioning Meshes, and Computing Fill-Reducing Orderings of
	Sparse Matrices. By George Karypis.

	- A dependency of MUMPS, that is a dependency of SCIP, that is a
	dependency of OptiToolbox.
